[package]
name = "ansem-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.69"
rand = "0.8.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = ["MediaElementAudioSourceNode", "HtmlAudioElement", "AudioContext","Window", "HtmlImageElement", "console", "Document", "Event", "CssStyleDeclaration", "DomTokenList"] }
getrandom = { version = "0.2", features = ["js"] }
tokio_with_wasm = "0.4.4"
wasm-bindgen-futures = "0.4.42"
futures = "0.3.30"

[lib]
crate-type = ["cdylib", "rlib"]

